Adding codeclimate reference in the readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,2 @@
 == PurrSuit - Ionic
+[![Code Climate](https://codeclimate.com/github/PurrSuit/frontend_purrsuit/badges/gpa.svg)](https://codeclimate.com/github/PurrSuit/frontend_purrsuit)
